# lake-of-vectors

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  features-list.md  init.sh  pyproject.toml  tasks-list.md
docs/: 2026-04-03-lake-of-embeddings-design.md  plan.md
scripts/: search.py
src/lake_of_embeddings/: cli.py  config.py
src/lake_of_embeddings/embeddings/: api.py
src/lake_of_embeddings/mcp/: server.py
src/lake_of_embeddings/publishers/: markdown.py
src/lake_of_embeddings/sync/: chunker.py  engine.py
src/lake_of_vectors/: cli.py  config.py
src/lake_of_vectors/embeddings/: api.py  base.py  local.py
src/lake_of_vectors/mcp/: server.py
src/lake_of_vectors/publishers/: base.py  markdown.py  plaintext.py  sqlite.py
src/lake_of_vectors/sync/: engine.py
tests/: test_chunker.py  test_cli.py  test_config.py  test_engine.py  test_integration.py  test_mcp_server.py
tests/publishers/: test_markdown.py  test_plaintext.py  test_sqlite.py
