[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lake-of-vectors"
version = "0.1.0"
description = "Local semantic search over personal knowledge bases"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "mcp>=1.26.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[project.scripts]
lake = "lake_of_vectors.cli:cli"
